# ITL

new_method/: CMakeLists.txt  build.sh
new_method/src/: config.c  config.h  defs.h  main.c  prayer.c  prayer.h
new_method/tests/: run_tests.py
